# Abschlussabgabe

./: README.md  Startseite.py  main_streamlit_app.py  pyproject.toml  requirements.txt
data/: person_db.json
pages/: 02_Leistungs-_und_Herzfrequenzplots.py  02_Personendaten.py  03_Leistungs-_und_Herzfrequenzplots.py  Fruehere_Assingments.py  neue_Person_hinzufuegen.py
source/: analyze_heartrate_data.py  ekg_class.py  ekg_data.py  functions_Leistungskurve2.py  functions_hr_plot.py  person_class.py  streamlit_func.py
